--- a/src/content/blog/新年计划.md
+++ b/src/content/blog/新年计划.md
@@ -3,6 +3,6 @@ title: '一份来晚的年度总结'
 description: '这是一个测试帖'
 pubDate: 'Feb 9 2025'
 heroImage: '/117092881_p1.webp'
-pinned: true
+pinned: false
 notCompleted: true
 ---
